// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Apple Touch Icon generation options work correctly 1`] = `
[
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "apple-touch-icon.33bc6f10.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Apple Touch Icon generation options work correctly 2`] = `
{
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": [
    {
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Apple Touch Icon generation options work correctly 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Apple Touch Icon generation options work correctly 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.33bc6f10.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Config overrides package.json properties 1`] = `
[
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "apple-touch-icon.6b021b29.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Config overrides package.json properties 2`] = `
{
  "background_color": "white",
  "description": "Better test!",
  "display": "standalone",
  "icons": [
    {
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
  ],
  "name": "Tester",
  "scope": "./",
  "short_name": "Test",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Config overrides package.json properties 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Config overrides package.json properties 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.6b021b29.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Custom NODE_ENV options work 1`] = `
[
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "apple-touch-icon.6b021b29.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Custom NODE_ENV options work 2`] = `
{
  "background_color": "white",
  "description": "Ooh! testing!",
  "display": "standalone",
  "icons": [
    {
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
  ],
  "name": "jest",
  "scope": "./",
  "short_name": "testing",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Custom NODE_ENV options work 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Custom NODE_ENV options work 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.6b021b29.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Default generation works correctly 1`] = `
[
  "icon-96x96.7a11f66e.webp",
  "icon-96x96.0445f5ae.png",
  "icon-152x152.8a9657e1.webp",
  "icon-152x152.dbfe18c5.png",
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "icon-384x384.dd610217.webp",
  "icon-384x384.ab1f23bc.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "apple-touch-icon.6b021b29.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Default generation works correctly 2`] = `
{
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": [
    {
      "sizes": "96x96",
      "src": "./icon-96x96.7a11f66e.webp",
      "type": "image/webp",
    },
    {
      "sizes": "96x96",
      "src": "./icon-96x96.0445f5ae.png",
      "type": "image/png",
    },
    {
      "sizes": "152x152",
      "src": "./icon-152x152.8a9657e1.webp",
      "type": "image/webp",
    },
    {
      "sizes": "152x152",
      "src": "./icon-152x152.dbfe18c5.png",
      "type": "image/png",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
    {
      "sizes": "384x384",
      "src": "./icon-384x384.dd610217.webp",
      "type": "image/webp",
    },
    {
      "sizes": "384x384",
      "src": "./icon-384x384.ab1f23bc.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Default generation works correctly 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Default generation works correctly 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.6b021b29.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Favicon generation works correctly 1`] = `
[
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "favicon-32x32.88ebad49.png",
  "favicon-16x16.7a068b9a.png",
  "apple-touch-icon.6b021b29.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Favicon generation works correctly 2`] = `
{
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": [
    {
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Favicon generation works correctly 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Favicon generation works correctly 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./favicon-32x32.88ebad49.png",
      "rel": "icon",
      "sizes": "32x32",
    },
  ],
  [
    "link",
    {
      "href": "./favicon-16x16.7a068b9a.png",
      "rel": "icon",
      "sizes": "16x16",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.6b021b29.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Formats work correctly 1`] = `
[
  "icon-192x192.2006e5a3.webp",
  "icon-192x192.4bcf89d0.png",
  "icon-192x192.f29b1daa.jpeg",
  "icon-512x512.3f374abb.webp",
  "icon-512x512.ea90c93c.png",
  "icon-512x512.522e1f74.jpeg",
  "apple-touch-icon.e6f004a7.png",
  "mstile-70x70.35c59d70.png",
  "mstile-150x150.d7e11dc7.png",
  "mstile-310x310.46efde35.png",
  "mstile-310x150.e5738340.png",
]
`;

exports[`Formats work correctly 2`] = `
{
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": [
    {
      "sizes": "192x192",
      "src": "./icon-192x192.2006e5a3.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.4bcf89d0.png",
      "type": "image/png",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.f29b1daa.jpeg",
      "type": "image/jpeg",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.3f374abb.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.ea90c93c.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.522e1f74.jpeg",
      "type": "image/jpeg",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Formats work correctly 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.35c59d70.png"/><square150x150logo src="./mstile-150x150.d7e11dc7.png"/><square310x310logo src="./mstile-310x310.46efde35.png"/><wide310x150logo src="./mstile-310x150.e5738340.png"/></tile></msapplication></browserconfig>"`;

exports[`Formats work correctly 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.e6f004a7.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Microsoft Tile generation options work correctly 1`] = `
[
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "apple-touch-icon.6b021b29.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Microsoft Tile generation options work correctly 2`] = `
{
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": [
    {
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Microsoft Tile generation options work correctly 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>red</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Microsoft Tile generation options work correctly 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.6b021b29.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Purpose modification works 1`] = `
[
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "apple-touch-icon.6b021b29.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Purpose modification works 2`] = `
{
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": [
    {
      "purpose": "maskable any",
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "purpose": "maskable any",
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
    {
      "purpose": "maskable any",
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "purpose": "maskable any",
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Purpose modification works 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Purpose modification works 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.6b021b29.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Resize method option works correctly 1`] = `
[
  "icon-192x192.b3a5ef21.webp",
  "icon-192x192.2a5c2b9a.png",
  "icon-512x512.d57841a4.webp",
  "icon-512x512.f81606ee.png",
  "apple-touch-icon.ee7d2e95.png",
  "mstile-70x70.b0b12618.png",
  "mstile-150x150.1daef98c.png",
  "mstile-310x310.6ba11d6b.png",
  "mstile-310x150.c1acfedf.png",
]
`;

exports[`Resize method option works correctly 2`] = `
{
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": [
    {
      "sizes": "192x192",
      "src": "./icon-192x192.b3a5ef21.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.2a5c2b9a.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.d57841a4.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.f81606ee.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Resize method option works correctly 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.b0b12618.png"/><square150x150logo src="./mstile-150x150.1daef98c.png"/><square310x310logo src="./mstile-310x310.6ba11d6b.png"/><wide310x150logo src="./mstile-310x150.c1acfedf.png"/></tile></msapplication></browserconfig>"`;

exports[`Resize method option works correctly 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.ee7d2e95.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Safari Pinned Tab options work 1`] = `
[
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "safari-pinned-tab.a2b84e4d.svg",
  "apple-touch-icon.6b021b29.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Safari Pinned Tab options work 2`] = `
{
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": [
    {
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Safari Pinned Tab options work 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Safari Pinned Tab options work 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "color": "black",
      "href": "./safari-pinned-tab.a2b84e4d.svg",
      "rel": "mask-icon",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.6b021b29.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Screenshot injection works 1`] = `
[
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "screenshot.13847923.png",
  "apple-touch-icon.6b021b29.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Screenshot injection works 2`] = `
{
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": [
    {
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "screenshots": [
    {
      "src": "https://myfakesite.com/screenshot0.webp",
      "type": "image/webp",
    },
    {
      "sizes": "1976x1496",
      "src": "./screenshot.13847923.png",
      "type": "image/png",
    },
    {
      "sizes": "123x456",
      "src": "./screenshot.13847923.png",
      "type": "image/png",
    },
  ],
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Screenshot injection works 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Screenshot injection works 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.6b021b29.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Shortcuts work 1`] = `
[
  "icon-96x96.7a11f66e.webp",
  "icon-96x96.0445f5ae.png",
  "icon-152x152.8a9657e1.webp",
  "icon-152x152.dbfe18c5.png",
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "icon-384x384.dd610217.webp",
  "icon-384x384.ab1f23bc.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "shortcut-icon1-96x96.7a11f66e.webp",
  "shortcut-icon1-96x96.0445f5ae.png",
  "apple-touch-icon.6b021b29.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Shortcuts work 2`] = `
{
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": [
    {
      "sizes": "96x96",
      "src": "./icon-96x96.7a11f66e.webp",
      "type": "image/webp",
    },
    {
      "sizes": "96x96",
      "src": "./icon-96x96.0445f5ae.png",
      "type": "image/png",
    },
    {
      "sizes": "152x152",
      "src": "./icon-152x152.8a9657e1.webp",
      "type": "image/webp",
    },
    {
      "sizes": "152x152",
      "src": "./icon-152x152.dbfe18c5.png",
      "type": "image/png",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
    {
      "sizes": "384x384",
      "src": "./icon-384x384.dd610217.webp",
      "type": "image/webp",
    },
    {
      "sizes": "384x384",
      "src": "./icon-384x384.ab1f23bc.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "shortcuts": [
    {
      "name": "Example",
      "short_name": "Example",
      "url": "/example",
    },
    {
      "description": "Complex config",
      "icons": [
        {
          "sizes": "96x96",
          "src": "./shortcut-icon1-96x96.7a11f66e.webp",
          "type": "image/webp",
        },
        {
          "sizes": "96x96",
          "src": "./shortcut-icon1-96x96.0445f5ae.png",
          "type": "image/png",
        },
      ],
      "name": "Complex",
      "short_name": "CX",
      "url": "/complex",
    },
  ],
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Shortcuts work 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Shortcuts work 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.6b021b29.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Specifying sizes works properly 1`] = `
[
  "icon-57x57.94e88f49.webp",
  "icon-57x57.82ada0ff.png",
  "icon-180x180.e3e40242.webp",
  "icon-180x180.92645e70.png",
  "icon-384x384.dd610217.webp",
  "icon-384x384.ab1f23bc.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "apple-touch-icon.6b021b29.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Specifying sizes works properly 2`] = `
{
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": [
    {
      "sizes": "57x57",
      "src": "./icon-57x57.94e88f49.webp",
      "type": "image/webp",
    },
    {
      "sizes": "57x57",
      "src": "./icon-57x57.82ada0ff.png",
      "type": "image/png",
    },
    {
      "sizes": "180x180",
      "src": "./icon-180x180.e3e40242.webp",
      "type": "image/webp",
    },
    {
      "sizes": "180x180",
      "src": "./icon-180x180.92645e70.png",
      "type": "image/png",
    },
    {
      "sizes": "384x384",
      "src": "./icon-384x384.dd610217.webp",
      "type": "image/webp",
    },
    {
      "sizes": "384x384",
      "src": "./icon-384x384.ab1f23bc.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Specifying sizes works properly 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Specifying sizes works properly 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "white",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.6b021b29.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Standard parameters work properly 1`] = `
[
  "icon-192x192.6cf01f66.webp",
  "icon-192x192.3319fb8d.png",
  "icon-512x512.e00f3aff.webp",
  "icon-512x512.671b3f2d.png",
  "apple-touch-icon.721e2569.png",
  "mstile-70x70.38ff5bcf.png",
  "mstile-150x150.2b2e2882.png",
  "mstile-310x310.b0c50d9a.png",
  "mstile-310x150.57680644.png",
]
`;

exports[`Standard parameters work properly 2`] = `
{
  "background_color": "red",
  "categories": [
    "pwa",
    "amazing",
  ],
  "description": "test",
  "dir": "ltr",
  "display": "fullscreen",
  "iarc_rating_id": "someIarcRating",
  "icons": [
    {
      "sizes": "192x192",
      "src": "./icon-192x192.6cf01f66.webp",
      "type": "image/webp",
    },
    {
      "sizes": "192x192",
      "src": "./icon-192x192.3319fb8d.png",
      "type": "image/png",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.e00f3aff.webp",
      "type": "image/webp",
    },
    {
      "sizes": "512x512",
      "src": "./icon-512x512.671b3f2d.png",
      "type": "image/png",
    },
  ],
  "lang": "en",
  "name": "My Amazing PWA",
  "orientation": "portrait-primary",
  "prefer_related_applications": true,
  "related_applications": [
    {
      "platform": "chrome_web_store",
      "url": "https://chrome.google.com/webstore/detail/my-amazing-pwa/jlkzsdheuahoidu3idjfakj",
    },
    {
      "id": "com.myamazingpwa.myamazingpwa",
      "platform": "play",
    },
  ],
  "scope": "/",
  "short_name": "My PWA",
  "start_url": "./test",
  "theme_color": "skyblue",
}
`;

exports[`Standard parameters work properly 3`] = `"<?xml version="1.0" encoding="utf-8"?><browserconfig><msapplication><tile><TileColor>skyblue</TileColor><square70x70logo src="./mstile-70x70.38ff5bcf.png"/><square150x150logo src="./mstile-150x150.2b2e2882.png"/><square310x310logo src="./mstile-310x310.b0c50d9a.png"/><wide310x150logo src="./mstile-310x150.57680644.png"/></tile></msapplication></browserconfig>"`;

exports[`Standard parameters work properly 4`] = `
[
  [
    "meta",
    {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  [
    "meta",
    {
      "content": "skyblue",
      "name": "theme-color",
    },
  ],
  [
    "link",
    {
      "href": "./apple-touch-icon.721e2569.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  [
    "link",
    {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;
